# QaaS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
qaas/: asgi.py  auth_backend.py  env.py  settings.py  urls.py  wsgi.py
quiz/: admin.py  apps.py  models.py  serializers.py  signals.py  test_quiz.py  views.py
quiz/migrations/: 0001_initial.py  0002_vote.py  0003_rename_participant_quiz_participants.py  0004_alter_answer_question_alter_question_quiz.py  0005_quiz_invitee.py  0006_rename_invitee_quiz_invitees.py  0007_invitation.py  0008_quiz_date_created_vote_date_created.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_role_user_roles.py  0003_create_roles.py
